<resources>
    <string name="app_name">Cadastro</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_reset">Limpar</string>
    <string name="lbl_city">Cidade</string>
    <string name="lbl_sex_f">Feminino</string>
    <string name="lbl_sex_m">Masculino</string>
    <string name="lbl_join_mail_list">Ingressar na lista de e-mails</string>
    <string name="lbl_mail">E-mail</string>
    <string name="lbl_tel">Telefone</string>
    <string name="lbl_name">Nome Completo</string>
    <string name="lbl_sex">Sexo</string>
    <string name="lbl_state">Estado</string>
</resources>