<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="30dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_name" />

    <EditText
        android:id="@+id/nomeCompletoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_tel" />

    <EditText
        android:id="@+id/telefoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_tel"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_mail" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_mail"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/ingressarListaCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_join_mail_list" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_sex" />

    <RadioGroup
        android:id="@+id/sexoRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/masculinoRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_sex_m" />

        <RadioButton
            android:id="@+id/femininoRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_sex_f" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_city" />

    <EditText
        android:id="@+id/cidadeEditText"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_city"
        android:textSize="20sp"  android:layout_width="match_parent"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_state" />

    <Spinner
        android:id="@+id/ufSpinner"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:minHeight="48dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/salvarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:width="120dp"
            android:text="@string/btn_save"
            app:layout_constraintEnd_toStartOf="@+id/btnSpacer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/btnSpacer"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/limparButton"
            app:layout_constraintStart_toEndOf="@+id/salvarButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/limparButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:width="120dp"
            android:text="@string/btn_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnSpacer"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
